added approverItemactivity stuff

--- a/CMPUT301W15T12/res/values/strings.xml
+++ b/CMPUT301W15T12/res/values/strings.xml
@@ -57,8 +57,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_claim">ClaimActivity</string>
     <string name="title_activity_approver">ApproverActivity</string>
-    <string name = "approverAddComment">Add Comment</string>
-	<string name = "approverApprove">Approve</string>
-	<string name = "approverReturn">Return</string>
-	
+    <string name="approverAddComment">Add Comment</string>
+    <string name="approverApprove">Approve</string>
+    <string name="approverReturn">Return</string>
+    <string name="title_activity_approver_item">ApproverItemActivity</string>
+    <string name = "approverphoto">Photo</string>
+
 </resources>
