--- a/CMPUT301W15T12/res/values/strings.xml
+++ b/CMPUT301W15T12/res/values/strings.xml
@@ -62,6 +62,10 @@
     <string name="approverApprove">Approve</string>
     <string name="approverReturn">Return</string>
     <string name="title_activity_approver_item">ApproverItemActivity</string>
-    <string name = "approverphoto">Photo</string>
+    <string name="approverphoto">Photo</string>
+    <string name="title_activity_add_comments">AddCommentsActivity</string>
+    <string name="title_activity_approver_list">ApproverListActivity</string>
+    <string name="title_activity_new_account">NewAccountActivity</string>
+    <string name="title_activity_see_comments">SeeCommentsActivity</string>
 
 </resources>
