added pop up date calendars

--- a/CMPUT301W15T12/res/values/strings.xml
+++ b/CMPUT301W15T12/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="comments">Comments</string>
     <string name="add_comments">Add Comments</string>
     <string name="approvers">Approvers</string>
+    <string name="title_claim_page">Claim Page</string>
 </resources>
