tabs for add claim

--- a/CMPUT301W15T12/res/values/strings.xml
+++ b/CMPUT301W15T12/res/values/strings.xml
@@ -82,5 +82,6 @@
     <string name="choose_claimant">See Your Claims</string>
     <string name="choose_approver">See Claims Waiting for Approval</string>
     <string name="title_activity_tab_claim">TabClaimActivity</string>
+    <string name="title_activity_add_destinations">AddDestinationsActivity</string>
 
 </resources>
